--- a/css/exam_structure.css
+++ b/css/exam_structure.css
@@ -18,7 +18,7 @@
    	width: 845px;
 	padding: 15px 15px 25px 20px;
     margin: 0 0 15px 15px;
-    border-color: #e5e5e5 #eee #eee;
+    border-color: #e5e5e5 #fff #fff #fff;
     border-style: solid;
     border-width: 1px 0;
     -webkit-box-shadow: inset 0 3px 6px rgba(0,0,0,.05);
